# gitlab-ci-dashboard

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  LICENSE  Makefile  README.md  angular.json  docker-compose.yml  jest.config.js  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml  proxy.conf.js  renovate.json  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.build.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
api/: .env  .env.example  .gitignore  .local.example.env  Cargo.toml  build.gradle.kts  config.example.toml  go.mod  go.sum  main.go
api/branch/: branch_client.go  branch_client_mock.go  branch_client_test.go  branch_handler.go  branch_handler_test.go  branch_service.go  branch_service_test.go  gitlab_client.go  gitlab_client_mock.go
api/client/: gitlab_client.go
api/cmd/: main.go
api/config/: app_config.go  gitlab_config.go  gitlab_config_test.go  server_config.go  server_config_test.go
api/data/: types.go
api/group/: gitlab_client.go  gitlab_client_mock.go  group_client.go  group_client_mock.go  group_client_test.go  group_controller.go  group_controller_test.go  group_handler.go  group_handler_test.go  group_service.go  group_service_test.go
api/job/: gitlab_client.go  job_client.go  job_client_test.go  job_handler.go  job_handler_test.go  job_key.go  job_key_test.go  job_service.go  job_service_test.go
api/mock/: branch_client.go  gitlab_client.go  group_client.go  pipeline_client.go  project_client.go  schedule_client.go
api/model/: error.go  models.go  pipeline_key.go  pipeline_key_test.go  project_pipeline.go  project_pipelines.go  types.go
api/pipeline/: gitlab_client.go  gitlab_client_mock.go  pipeline_client.go  pipeline_client_mock.go  pipeline_client_test.go  pipeline_controller.go  pipeline_controller_test.go  pipeline_handler.go  pipeline_handler_test.go  pipeline_key.go  pipeline_key_test.go  pipeline_service.go
api/project/: gitlab_client.go  gitlab_client_mock.go  project_client.go  project_client_mock.go  project_client_test.go  project_controller.go  project_controller_test.go  project_handler.go  project_handler_test.go  project_service.go  project_service_test.go
api/schedule/: gitlab_client.go  gitlab_client_mock.go  schedule_client.go  schedule_client_mock.go  schedule_client_test.go  schedule_handler.go  schedule_handler_test.go  (+2 more)
(+510 files in other folders)
