[package]
name = "gcd_api"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-web-prom = { version = "0.10.0", features = ["process"] }
actix-files = { version = "0.6.9" }
actix-service = { version = "2.0.3" }
actix-http = "3.11.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-querystring-actix = "0.3.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.29"
moka = { version = "0.12.11", features = ["future"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["sync"] }
async-trait = "0.1.89"
futures = "0.3.31"
toml = "0.9.8"

[dev-dependencies]
serial_test = "3.2.0"
